--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gif.js": "^0.2.0",
     "three": "^0.178.0"
   },
   "devDependencies": {
